++ SocialSuite 1.0.0-dev, Released: 30/04/2012
++++++++++++++++++++++++++++++++++++++++++++++

First release, including:
- getFacebookProfile
- getGooglePlusOne
- getTwitterProfile
- prettyNumbers