@@ -1,0 +1,6 @@
+<h2>[[+name]] <span class="smalldate">([[+count]] photos, updated on [[+updated_time:strtotime:date=`%d/%m/%Y`]])</span></h2>
+<div class="gfp-photos-wrapper">
+    <ul>
+        [[+photos]]
+    </ul>
+</div>
