@@ -1,0 +1,1 @@
+<li class="gfp-photo"><img src="[[+image_thumb]]" /></li>
