@@ -1,3 +1,5 @@
+- Added getFacebookPhotos snippet.
+
 ++ SocialSuite 1.0.0-dev, Released: 30/04/2012
 ++++++++++++++++++++++++++++++++++++++++++++++
 
